--- a/apps/WWCapp/templates/WWCapp/donorpage.html
+++ b/apps/WWCapp/templates/WWCapp/donorpage.html
@@ -2,9 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Donor Page</title>
+    {% load staticfiles %}
+
+    <link rel="stylesheet" href="{% static 'WWCapp/css/donor.css' %}" media="screen" title="no title"  charset="utf-8">
+
   </head>
   <body>
     <h1>DonorPage</h1>
+    <h2>Hello {{user}}, Thank You for Donating!</h2>
+    <div class="sidebar">
+      <h3>Categories</h3>
+      <ul>
+        <li>Room Availability</li>
+        <li>Electronics</li>
+        <li>Furnitures</li>
+        <li>Room Availability</li>
+      </ul>
+    </div>
+    <div class="requests">
+      <table>
+        <tr>
+          <th>Item Name</th>
+          <th>Category</th>
+          <th>Status</th>
+        </tr>
+
+      {% for req in requests %}
+        <tr>
+          <td>req</td>
+          <td>req[1]</td>
+          <td>req[2]</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
   </body>
 </html>
