create basic donation request form

--- a/apps/WWCapp/templates/WWCapp/viewdonations.html
+++ b/apps/WWCapp/templates/WWCapp/viewdonations.html
@@ -11,8 +11,8 @@
   <body>
   	<div class="main">
   		<h1>View available donations </h1> 		
-		<a href="/request" class="button">Request Items</a>		
-		<table style="width:100%">
+		<a href="/donationRequest" class="button">Request Items</a>		
+		<table style="width:60%">
   			<tr>
     			<th>Item</th>
     			<th>Category</th> 
