--- a/apps/WWCapp/static/WWCapp/css/viewdonations.css
+++ b/apps/WWCapp/static/WWCapp/css/viewdonations.css
@@ -1,12 +1,44 @@
+
 table, th, td {
     border: 1px solid black;
 }
 
-a.button {
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
+body {
+	background-color: #ffe4c4;
+}
 
+img {
+    display: block;
+    margin: auto;
+}
+
+table {
+	background-color: white;
+	width: 200%;
+	border-collapse: collapse;
+    margin: auto;
+}
+
+a.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    width: 40%;
+	margin-left: 30%;
+	margin-right: 30%
+    text-align: center;
     text-decoration: none;
-    color: initial;
+    font-size: 16px;
+    padding : 15px 15px 15px 15px;
+    margin  : 5px auto;
+    display : block;
+
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+
+}
+
+.button:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
 }
