--- a/apps/WWCapp/templates/WWCapp/donorpage.html
+++ b/apps/WWCapp/templates/WWCapp/donorpage.html
@@ -2,9 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Donor Page</title>
+    {% load staticfiles %}
+
+    <link rel="stylesheet" href="{% static 'WWCapp/css/donor.css' %}" media="screen" title="no title"  charset="utf-8">
+
   </head>
   <body>
-    <h1>DonorPage</h1>
+<div class="donor">
+
+    <a href="/donateitems"><h2>Donate Items</h2></a>
+    <h2>Hello {{user}}, Thank You for Donating!</h2>
+    <div class="sidebar">
+      <h3>Categories</h3>
+      <ul>
+        <li>Room Availability</li>
+        <li>Electronics</li>
+        <li>Furnitures</li>
+        <li>Room Availability</li>
+      </ul>
+    </div>
+    <div class="requests">
+      <table>
+        <tr>
+          <th>Item Name</th>
+          <th>Category</th>
+          <th>Status</th>
+        </tr>
+      {% for req in items %}
+        <tr>
+          <td>{{req.item}}</td>
+          <td>{{req.category}}</td>
+          <td>
+            {% if req.status == "Not Claimed" %}
+             <button><a href="/checktoclaim/{{req.id}}">{{req.status}}</a></button>
+            {% else %}
+              <button><a href="/checktoclaim/{{req.id}}">{{req.status}}</a></button>
+            {% endif %}
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
   </body>
 </html>
