--- a/apps/WWCapp/templates/WWCapp/donorpage.html
+++ b/apps/WWCapp/templates/WWCapp/donorpage.html
@@ -10,9 +10,10 @@
   </head>
   <body>
 <div class="donor">
-
+    <div class="donorheading">
+      <h2>Hello {{user}}, Thank You for Donating!</h2>
+    </div>
     <a href="/donateitems"><h2>Donate Items</h2></a>
-    <h2>Hello {{user}}, Thank You for Donating!</h2>
     <div class="sidebar">
       <h3>Categories</h3>
       <ul>
@@ -24,6 +25,7 @@
     </div>
     <div class="requests">
       <table>
+        <h2>Victim's Requests</h2>
         <tr>
           <th>Item Name</th>
           <th>Category</th>
@@ -38,6 +40,24 @@
         {% endfor %}
       </table>
     </div>
+    <div class="requests">
+      <table>
+        <h2>Your Donations</h2>
+        <tr>
+          <th>Item Name</th>
+          <th>Category</th>
+          <th>Status</th>
+        </tr>
+      {% for req in items %}
+        <tr>
+          <td>{{req.0}}</td>
+          <td>{{req.1}}</td>
+          <td>{{req.2}}</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+
   </div>
   </body>
 </html>
