--- a/apps/WWCapp/templates/WWCapp/index.html
+++ b/apps/WWCapp/templates/WWCapp/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="main">
       <div class="inner">
-        <h1 class="heading">NapaFire</h1>
+        <div class="heading">
+          <h1 >Napa Fire Relief</h1>
+        </div>
         <div class="registerform">
           <form class="register-form" action="/register" method="post">
             <h1>Sign Up</h1>
